boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_nested_closure_parameters_from_contract_group.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/nested_closure_parameter\")"
---
===== jni/demo.h =====
<c abi support declarations>
FfiStatus boltffi_function_demo_install(uint32_t (*callback_call)(void *, uint32_t (*)(void *, uint32_t), void *, void (*)(void *)), void *callback_context, void (*callback_release)(void *));

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni status helper>
static uint32_t boltffi_jni____closure__box_closure_to_u32_call(void *user_data, uint32_t (*arg0_call)(void *, uint32_t), void *arg0_context, void (*arg0_release)(void *));
static void boltffi_jni____closure__box_closure_to_u32_release(void *user_data);
static uint32_t boltffi_jni____closure__u32_to_u32_call(void *user_data, uint32_t arg0);
static void boltffi_jni____closure__u32_to_u32_release(void *user_data);

typedef struct {
    uint32_t (*call)(void *, uint32_t);
    void *context;
    void (*release)(void *);
} BoltFFIJniClosure___closure__u32_to_u32;
static BoltFFIJniClosure___closure__u32_to_u32 *boltffi_jni____closure__u32_to_u32_handle_ref(jlong value) {
    return value == 0 ? NULL : (BoltFFIJniClosure___closure__u32_to_u32 *)(uintptr_t)value;
}

static void boltffi_jni____closure__u32_to_u32_handle_release(jlong value) {
    BoltFFIJniClosure___closure__u32_to_u32 *closure = boltffi_jni____closure__u32_to_u32_handle_ref(value);
    if (closure == NULL) {
        return;
    }
    if (closure->release != NULL) {
        closure->release(closure->context);
    }
    free(closure);
}

static jlong boltffi_jni____closure__u32_to_u32_handle_new(JNIEnv *env, uint32_t (*call)(void *, uint32_t), void *context, void (*release)(void *)) {
    BoltFFIJniClosure___closure__u32_to_u32 *closure = (BoltFFIJniClosure___closure__u32_to_u32 *)malloc(sizeof(BoltFFIJniClosure___closure__u32_to_u32));
    if (closure == NULL) {
        if (release != NULL) {
            release(context);
        }
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI closure handle");
        return 0;
    }
    closure->call = call;
    closure->context = context;
    closure->release = release;
    return (jlong)(uintptr_t)closure;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1u32_1to_1u32_1release(JNIEnv *env, jclass cls, jlong value) {
    (void)env;
    (void)cls;
    boltffi_jni____closure__u32_to_u32_handle_release(value);
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1u32_1to_1u32_1call(JNIEnv *env, jclass cls, jlong value, jint arg0) {
    (void)env;
    (void)cls;
    BoltFFIJniClosure___closure__u32_to_u32 *closure = boltffi_jni____closure__u32_to_u32_handle_ref(value);
    if (closure == NULL || closure->call == NULL) {
        return 0;
    }

    uint32_t result = closure->call(closure->context, (uint32_t)arg0);

    return (jint)result;
}

static jclass g____closure__box_closure_to_u32_class = NULL;
static jmethodID g____closure__box_closure_to_u32_call_method = NULL;
static jmethodID g____closure__box_closure_to_u32_free_method = NULL;
static uint32_t boltffi_jni____closure__box_closure_to_u32_call(void *user_data, uint32_t (*arg0_call)(void *, uint32_t), void *arg0_context, void (*arg0_release)(void *)) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    jlong __boltffi_arg0_handle = 0;

    __boltffi_arg0_handle = boltffi_jni____closure__u32_to_u32_handle_new(env, arg0_call, (void *)arg0_context, arg0_release);
    if ((*env)->ExceptionCheck(env)) {

    boltffi_jni____closure__u32_to_u32_handle_release(__boltffi_arg0_handle);
        boltffi_jni_clear_exception(env);
        boltffi_jni_exit(env, attached);
        return 0;
    }
    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____closure__box_closure_to_u32_class, g____closure__box_closure_to_u32_call_method, handle, __boltffi_arg0_handle);
    if (boltffi_jni_clear_exception(env)) {

    boltffi_jni____closure__u32_to_u32_handle_release(__boltffi_arg0_handle);
        boltffi_jni_exit(env, attached);
        return 0;
    }

    boltffi_jni____closure__u32_to_u32_handle_release(__boltffi_arg0_handle);
    boltffi_jni_exit(env, attached);
    return result;
}

static void boltffi_jni____closure__box_closure_to_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__box_closure_to_u32_class, g____closure__box_closure_to_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__box_closure_to_u32(JNIEnv *env) {
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/ClosureBoxClosureToU32Callbacks");
    if (local_class == NULL) {
        return false;
    }
    g____closure__box_closure_to_u32_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (g____closure__box_closure_to_u32_class == NULL) {
        return false;
    }
    g____closure__box_closure_to_u32_call_method = (*env)->GetStaticMethodID(env, g____closure__box_closure_to_u32_class, "call", "(JJ)I");
    if (g____closure__box_closure_to_u32_call_method == NULL) {
        goto fail;
    }
    g____closure__box_closure_to_u32_free_method = (*env)->GetStaticMethodID(env, g____closure__box_closure_to_u32_class, "free", "(J)V");
    if (g____closure__box_closure_to_u32_free_method == NULL) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__box_closure_to_u32_class);
    g____closure__box_closure_to_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__box_closure_to_u32(JNIEnv *env) {
    if (g____closure__box_closure_to_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__box_closure_to_u32_class);
    }
    g____closure__box_closure_to_u32_class = NULL;
    g____closure__box_closure_to_u32_call_method = NULL;
    g____closure__box_closure_to_u32_free_method = NULL;
}

static jclass g____closure__u32_to_u32_class = NULL;
static jmethodID g____closure__u32_to_u32_call_method = NULL;
static jmethodID g____closure__u32_to_u32_free_method = NULL;
static uint32_t boltffi_jni____closure__u32_to_u32_call(void *user_data, uint32_t arg0) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____closure__u32_to_u32_class, g____closure__u32_to_u32_call_method, handle, (jint)arg0);
    if (boltffi_jni_clear_exception(env)) {

        boltffi_jni_exit(env, attached);
        return 0;
    }

    boltffi_jni_exit(env, attached);
    return result;
}

static void boltffi_jni____closure__u32_to_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__u32_to_u32_class, g____closure__u32_to_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__u32_to_u32(JNIEnv *env) {
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/ClosureU32ToU32Callbacks");
    if (local_class == NULL) {
        return false;
    }
    g____closure__u32_to_u32_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (g____closure__u32_to_u32_class == NULL) {
        return false;
    }
    g____closure__u32_to_u32_call_method = (*env)->GetStaticMethodID(env, g____closure__u32_to_u32_class, "call", "(JI)I");
    if (g____closure__u32_to_u32_call_method == NULL) {
        goto fail;
    }
    g____closure__u32_to_u32_free_method = (*env)->GetStaticMethodID(env, g____closure__u32_to_u32_class, "free", "(J)V");
    if (g____closure__u32_to_u32_free_method == NULL) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__u32_to_u32_class);
    g____closure__u32_to_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__u32_to_u32(JNIEnv *env) {
    if (g____closure__u32_to_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__u32_to_u32_class);
    }
    g____closure__u32_to_u32_class = NULL;
    g____closure__u32_to_u32_call_method = NULL;
    g____closure__u32_to_u32_free_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) != JNI_OK) {
        return JNI_ERR;
    }
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/Native");
    if (local_class == NULL) {
        return JNI_ERR;
    }
    boltffi_jni_native_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (boltffi_jni_native_class == NULL) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__box_closure_to_u32(env)) {
        boltffi_jni_unload____closure__box_closure_to_u32(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__u32_to_u32(env)) {
        boltffi_jni_unload____closure__box_closure_to_u32(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____closure__box_closure_to_u32(env);
        boltffi_jni_unload____closure__u32_to_u32(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1install(JNIEnv *env, jclass cls, jlong callback) {
    (void)cls;

    FfiStatus __boltffi_status = boltffi_function_demo_install(boltffi_jni____closure__box_closure_to_u32_call, (void *)callback, boltffi_jni____closure__box_closure_to_u32_release);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    return;
}
